{
    "name": "GameControlles",
    "maps": [
        {
            "name": "MainMenu",
            "id": "88f5ac68-0e52-4ef4-9017-4e753eea3a8b",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "0b35d9c0-3f53-438a-a3ca-bc771ffe1dab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "3d1d2d5a-d520-4417-941d-70fcad3f9e54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "043e945b-7e30-4455-8ad3-642cb20f93de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "827ba827-3755-4693-95c7-83f0128ae03c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4848fe5c-34b5-4271-88b1-90d4b070d471",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e679050-5af0-46d1-975c-a879ce5594d3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "503e2dde-1f96-4720-b5db-d2fc606d98b1",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1a43a8a-90da-47b8-9fff-c84814cc7fae",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6de8a30-112d-4789-bb0d-f79b6f326f07",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}